# ScrumBut

./: .gitignore  .travis.yml  Application.hs  Foundation.hs  GitHub.hs  LICENSE.md  Model.hs  Procfile  README.md  ScrumBut.cabal  Settings.hs  app.json  cabal.config
.halcyon/: sandbox-extra-apps
Handler/: Home.hs  Issue.hs  Milestone.hs  Repo.hs  Repositories.hs
app/: devel.hs
config/: keter.yml  models  routes  settings.yml  test-settings.yml
script/: bootstrap  build  deploy  server  setup  startdb  test  update
templates/: _repository.hamlet  homepage.hamlet  issue.hamlet  milestone.hamlet  repositories.hamlet  repository.hamlet  sign_in.hamlet
