Name:                ScrumBut
Version:             0.1
Synopsis:            Psuedo-Scrum using GitHub issues
Description:         ScrumBut is a web app that implements some Scrum workflows on top of GitHub issues.
License:             MIT
License-file:        LICENSE.md
Author:              Justin Spahr-Summers
Maintainer:          Justin.SpahrSummers@gmail.com
Copyright:           Copyright (c) 2015 Justin Spahr-Summers
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10

Source-repository head
  Type:     git
  Location: https://github.com/jspahrsummers/ScrumBut

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable ScrumBut
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
